added authentication skelet

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Authentication": {
+    "JwtKey": "PrivateKeyOfApp",
+    "JwtExpireDays": 15,
+    "JwtIssuer":  "imotoAPI"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
