added logging mechanism for moderator

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,8 @@
 {
   "Authentication": {
-    "JwtKey": "PrivateKeyOfApp",
+    "JwtKey": "PrivateKeyOfApp12PrivateKeyOfApp12",
     "JwtExpireDays": 15,
-    "JwtIssuer":  "imotoAPI"
+    "JwtIssuer": "imotoAPI"
   },
   "Logging": {
     "LogLevel": {
