AFTER DEPLOYING TO AZEURE

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ImotoDbConnection": "Server=LAPTOP-NPDMISHQ;Database=imotoDb;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
